--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -240,6 +240,10 @@
             </div>
             
             <form id="registroForm" method="POST" action="/registrar" enctype="multipart/form-data">
+                
+                 <!-- Token CSRF (importante!) -->
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+    
                 <div class="form-group">
                     <label for="nombre">Nombre completo</label>
                     <input type="text" id="nombre" name="nombre" class="form-control" required>
