--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -243,9 +243,14 @@
                 
                 
                 <div class="form-group">
-                    <label for="nombre">Nombre completo</label>
+                    <label for="nombre">Nombre</label>
                     <input type="text" id="nombre" name="nombre" class="form-control" required>
                     <div class="error-message" id="nombreError">Por favor ingresa tu nombre completo</div>
+                </div>
+                                <div class="form-group">
+                    <label for="nombre">Apellido</label>
+                    <input type="text" id="apellido" name="apellido" class="form-control" required>
+                    <div class="error-message" id="nombreError">Por favor ingresa tu apellido</div>
                 </div>
                 
                 <div class="form-group">
